@@ -6,7 +6,7 @@ servlet 2.3
 xerces  2.2
 jtidy   04aug2000r7
 rhino   1.5preR4 (patched)
-NekoHTML 0.7.1
+NekoHTML 0.7.2
 
 (for testing HttpUnit only)
 mail        (javamail 1.2)
